CMAKE_MINIMUM_REQUIRED(VERSION 3.18 FATAL_ERROR)
PROJECT(neu.cv.h)

ADD_DEFINITIONS(-DNEUCVH_USE_EIGEN)
ADD_DEFINITIONS(-DNEUCVH_USE_OPENCV)

SET(CMAKE_BUILD_TYPE Debug)
SET(CMAKE_CXX_STANDARD 11)

SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin)

FIND_PACKAGE(OpenCV REQUIRED)

# NOTE: Please specify path to sourc code of Eigen library manually.
INCLUDE_DIRECTORIES(
  ${PROJECT_SOURCE_DIR}/include
  ${EIGEN_SOURCE_DIR}
  ${OpenCV_INCLUDE_DIRS}
)

ADD_EXECUTABLE(test_kalmanfilter ${PROJECT_SOURCE_DIR}/test/test_kalmanfilter.cpp)
TARGET_LINK_LIBRARIES(test_kalmanfilter ${OpenCV_LIBS})
